# rgbd_slam_simple_example

./: CMakeLists.txt  main.cpp
config/: rgbd_slam.json
data/: loop_result_after.g2o  loop_result_before.g2o  result_after.g2o  result_before.g2o
include/: slamBase.h
log/: slam.INFO  slam.ccfy-ThinkPad-T470.ccfy.log.INFO.20180727-170647.20769  slam.ccfy-ThinkPad-T470.ccfy.log.INFO.20181019-153711.25190
src/: CMakeLists.txt  Dense_Mono.cpp  detectFeatures.cpp  generatePointCloud.cpp  jointPointCloud.cpp  slam.cpp  slamBase.cpp  slamEnd.cpp  stereoVision.cpp  visualOdometry.cpp
